--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,13 @@ uuid = "e74b8d68-74d0-42b9-99ba-91d43d3ab0e8"
 authors = ["mschauer <moritzschauer@web.de>"]
 version = "0.1.0"
 
+[deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
 [compat]
 julia = "1"
 
