--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 julia = "1"
