--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+MeasureTheory = "eadaa1a4-d27c-401d-8699-e962e1bbc33b"
 Mitosis = "e74b8d68-74d0-42b9-99ba-91d43d3ab0e8"
