Try adding dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ jobs:
         julia --project=docs -e '
           using Pkg
           Pkg.develop(PackageSpec(path=pwd()))
+          Pkg.add(url="https://github.com/cscherrer/MeasureTheory.jl",rev="mitosis")
           Pkg.instantiate()
           using Documenter: doctest
           using Mitosis
