--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,9 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 julia = "1"
+UnPack = "0"
+MeasureTheory = "0.1"
+StatsBase = "0.33"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
