--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 julia = "1"
 UnPack = "1.0"
-MeasureTheory = "0.1"
+MeasureTheory = "0.1, 0.2"
 StatsBase = "0.33"
 
 [extras]
