--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Mitosis"
 uuid = "e74b8d68-74d0-42b9-99ba-91d43d3ab0e8"
 authors = ["mschauer <moritzschauer@web.de>"]
-version = "0.2.1"
+version = "0.2.2"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -13,7 +13,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-MeasureTheory = "0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8"
+MeasureTheory = "0.17"
 StatsBase = "0.33"
 UnPack = "1.0"
 julia = "1"
