--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-StatsBase = "0.33"
+StatsBase = "0.33, 0.34"
 UnPack = "1.0"
 julia = "1"
 
